--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 # Database
-db.url=
-db.user=
-db.password=
+db.url=jdbc:mysql://localhost:3306/shock_test
+db.user=wb2c0
+db.password=parrot2266
 db.debug=false
 
 # Server
