added custom app

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 db.url=jdbc:mysql://localhost:3306/shock_test
 db.user=wb2c0
 db.password=parrot2266
-db.debug=false
+db.debug=true
 
 # Server
 server.port=8080
